# ibkr-mcp-trading

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
examples/: nl_scanner.py  nl_testing.py  nl_trading.py  run_strategy.py  test_fundamentals.py  test_historical.py  test_ibkr.py  test_order.py  test_scanner.py  test_streaming.py
src/ibkr_mcp/engine/: manager.py  runner.py
src/ibkr_mcp/ibkr/: client.py  contracts.py  orders.py  service.py  wrapper.py
src/ibkr_mcp/llm/: parser.py
src/ibkr_mcp/mcp/: schemas.py  server.py
src/ibkr_mcp/mcp/tools/: scanner_tools.py  strategy_tools.py
src/ibkr_mcp/strategies/: base.py  moving_average.py
src/ibkr_mcp/utils/: fundamentals.py
tests/: test_basic.py
