[project]
name = "ibkr_mcp"
version = "0.1.0"
description = "MCP-based trading interface for Interactive Brokers TWS API"
authors = [
    {name = "Mayank Rasu"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "ibapi",
    "pydantic",
    "fastapi",
    "uvicorn"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]